# credit-card-fraud-detection

./: .gitignore  LICENSE  README.md  config.yaml  download_data.py  pyproject.toml  report.md  requirements.txt
notebooks/: eda.ipynb
src/: __init__.py  api.py  evaluate.py  features.py  train.py
