[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit_card_fraud_detection"
version = "0.1.0"
description = "A production-grade Credit Card Fraud Detection System using XGBoost, SMOTE, Optuna, and FastAPI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Author", email = "author@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "imbalanced-learn>=0.10.0",
    "xgboost>=1.7.0",
    "optuna>=3.1.0",
    "mlflow>=2.3.0",
    "pyyaml>=6.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "kagglehub>=0.2.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
